fix: add spacing below button on 404 page

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -769,6 +769,7 @@ main {
 
 .zak-error-404 {
 	font-size: 2em;
+	margin-bottom: 2em;
 
 	.zak-search-form {
 		.zak-search-field-label {
